# jcc

./: README.md  pyproject.toml
jcc/: _numba.py  convert.py  diff.py  palette.py  utils.py
jcc/palettes/: __init__.py  _base.py  types.py
jccc/: convert.py
jccc/data/palettes/: css4.npz
tests/: test_conversions.py  test_diff.py
