[tool.poetry]
name = "jcc"
version = "0.1.0"
description = "Color conversion functions that can be used with numba."
authors = ["Garrett Shipley <garrett.shipley7+github@gmail.com>"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numba = "^0.58.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
